--- a/app/package.json
+++ b/app/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.13",
     "less": "^4.1.3",
     "less-loader": "^11.1.2",
+    "mockjs": "^1.1.0",
     "vue": "^2.6.14",
-    "vue-router": "^3.6.5"
+    "vue-router": "^4.2.4",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -20,6 +23,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "source-map": "^0.7.4",
