--- a/app/package.json
+++ b/app/package.json
@@ -8,12 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
     "less": "^4.1.3",
     "less-loader": "^11.1.2",
     "mockjs": "^1.1.0",
+    "nprogress": "^0.2.0",
+    "swiper": "^10.1.0",
     "vue": "^2.6.14",
+    "vue-lazyload": "^3.0.0",
     "vue-router": "^4.2.4",
     "vuex": "^4.1.0"
   },
